# ollamacpp

./: .gitignore  CMakeLists.txt  README.MD  main.cpp  ollama.hpp
